force-app/main/default/objects/Order_Item__c/Order_Item__c.object-meta.xml
<CustomObject>
    <label>Order Item</label>
    <nameField>
        <displayFormat>OI-{0000}</displayFormat>
        <label>Order Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>