force-app/main/default/objects/Order_Item__c/fields/CDU__c.field-meta.xml
<CustomField>
    <fullName>CDU__c</fullName>
    <label>CDU</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>