force-app/main/default/objects/Order_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Indicate if New or Refurbished</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>