force-app/main/default/objects/Order_Item__c/fields/Holsters__c.field-meta.xml
<CustomField>
    <fullName>Holsters__c</fullName>
    <label>Holsters</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>