force-app/main/default/objects/Order_Item__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>GTLITE</fullName>
            </value>
            <value>
                <fullName>IMCT</fullName>
            </value>
            <value>
                <fullName>MCP100</fullName>
            </value>
            <value>
                <fullName>MCP100T</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP200T</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>MCT</fullName>
            </value>
            <value>
                <fullName>OE</fullName>
            </value>
            <value>
                <fullName>SFM</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>TT210</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>