force-app/main/default/objects/Order_Item__c/fields/QC_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>QC_Part_Number__c</fullName>
    <label>QC Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>