force-app/main/default/objects/Order_Item__c/fields/Sales_Order_Request__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Request</label>
    <referenceTo>Sales_Order_Request__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>