force-app/main/default/objects/Order_Item__c/fields/TITU_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TITU_Quantity__c</fullName>
    <label>TITU Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>