force-app/main/default/objects/Order_Item__c/fields/Trade_In_Trade_Up_TITU__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Trade_Up_TITU__c</fullName>
    <label>Trade In-Trade Up (TITU)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>